<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/title_bar_view"/>

    <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#dddddd"/>

            <!--第三方信息-->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#dddddd"
                    android:padding="8dp"
                    android:text="第三方信息"/>
            <!--业务流水-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="业务流水:"/>
                <EditText
                        android:id="@+id/input_thirdtrade_num"
                        style="@style/login_input_style"
                        android:hint="@string/input_thirdtrade_num"
                        android:text="123456"/>
            </LinearLayout>

            <!--客户信息-->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#dddddd"
                    android:padding="8dp"
                    android:text="客户信息"/>
            <!--客户姓名-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="客户姓名:"/>
                <EditText
                        android:id="@+id/input_client"
                        style="@style/login_input_style"
                        android:hint="@string/longin_input_name"
                        android:text="张三"/>
            </LinearLayout>
            <!--客户手机-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="客户手机:"/>
                <EditText
                        android:id="@+id/input_phone"
                        style="@style/login_input_style"
                        android:hint="@string/longin_input_phone"
                        android:text="13888888888"/>
            </LinearLayout>
            <!--客户性别-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="客户性别:"/>>

                <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                    <RadioButton
                            android:id="@+id/select_male"
                            style="@style/login_select_account_style"
                            android:button="@null"
                            android:checked="true"
                            android:text="@string/select_account_sex1"/>

                    <RadioButton
                            android:id="@+id/select_female"
                            style="@style/login_select_account_style"
                            android:layout_marginLeft="20dp"
                            android:text="@string/select_account_sex2"/>
                </RadioGroup>
            </LinearLayout>
            <!--证件地址-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="证件地址:"/>
                <EditText
                        android:id="@+id/input_idcard_address"
                        style="@style/login_input_style"
                        android:hint="@string/longin_input_idcard_address"
                        android:text="广东省广州市天河区"/>
            </LinearLayout>
            <!--证件号码-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="证件号码:"/>
                <EditText
                        android:id="@+id/input_idcard_num"
                        style="@style/login_input_style"
                        android:hint="@string/longin_input_idcard_num"
                        android:maxLength="18"
                        android:text="532101198906010015"/>
            </LinearLayout>

            <!--业务信息-->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#dddddd"
                    android:padding="8dp"
                    android:text="业务信息"/>
            <!--渠道编码-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="渠道编码:"/>
                <EditText
                        android:id="@+id/input_channel_code"
                        style="@style/login_input_style"
                        android:hint="@string/input_channel_code"
                        android:text="@string/channel_code"/>
            </LinearLayout>
            <!--渠道名称-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="渠道名称:"/>
                <EditText
                        android:id="@+id/input_channel_name"
                        style="@style/login_input_style"
                        android:hint="@string/input_channel_name"
                        android:text="双录系统移动端"/>
            </LinearLayout>
            <!--业务编码-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="业务编码:"/>
                <EditText
                        android:id="@+id/input_business_code"
                        style="@style/login_input_style"
                        android:hint="@string/input_business_code"
                        android:text="@string/business_code"/>
            </LinearLayout>
            <!--业务类型-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="业务类型:"/>
                <EditText
                        android:id="@+id/input_business_name"
                        style="@style/login_input_style"
                        android:hint="@string/input_business_name"
                        android:text="双录云基金项目"/>
            </LinearLayout>
            <!--产品名称-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="产品名称:"/>
                <EditText
                        android:id="@+id/input_product_name"
                        style="@style/login_input_style"
                        android:hint="@string/input_product_name"
                        android:text="@string/product_name"/>
            </LinearLayout>
            <!--产品编号-->
            <LinearLayout
                    style="@style/item_style">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="产品编号:"/>
                <EditText
                        android:id="@+id/input_product_number"
                        style="@style/login_input_style"
                        android:hint="@string/input_product_number"
                        android:text="@string/product_number"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/bt_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_round_style"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/next"
                    android:textColor="#FFFFFF"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>